Fixed a bug causing scrollbars to appear

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,6 +8,8 @@ body{
   min-width: $layout-max-width;  
   min-height: $layout-max-height;
 
+  overflow: hidden;
+
   background-color: $canvas;
 
   // Camera perspective
